# solver

./: CMakeLists.txt
include/: Block.hpp  Config.hpp  LinearAlgorithm.hpp  LinearProblem.hpp
src/: CMakeLists.txt  LinearProblem.cpp  main.cpp
