CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( DCSolver )

SET( CMAKE_CXX_COMPILER "g++-5" )
SET( CMAKE_BUILD_TYPE Debug )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )
SET( CMAKE_CXX_FLAGS "-std=c++14" )

INCLUDE_DIRECTORIES( include )
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
